--- a/Vidley/Views/Customers/CustomerForm.cshtml
+++ b/Vidley/Views/Customers/CustomerForm.cshtml
@@ -6,21 +6,27 @@
 
 <h2>New Customer</h2>
 
+@Html.ValidationSummary(true,"Please fix the following errors.")
 @using (Html.BeginForm("Save","Customers"))
 {
+    
     <div class="form-group">
         @Html.LabelFor(m=> m.Customer.Name)
         @Html.TextBoxFor(m=>m.Customer.Name,new {@class= "form-control"})
+        @Html.ValidationMessageFor(m=> m.Customer.Name)
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m=> m.Customer.BirthDate)
-        @Html.TextBoxFor(m=>m.Customer.BirthDate,"{0:d MMM yyyy}", new {@class= "form-control"})
-    </div>
-   
     <div class="form-group">
         @Html.LabelFor(m=> m.Customer.MemberShipTypeId)
         @Html.DropDownListFor(m=>m.Customer.MemberShipTypeId,new SelectList(Model.MemberShipTypes,"Id","Name"), "Select Membership Type", new {@class="form-control"})
+        @Html.ValidationMessageFor(m=> m.Customer.MemberShipTypeId)
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m=> m.Customer.BirthDate)
+        @Html.TextBoxFor(m=>m.Customer.BirthDate,"{0:d MMM yyyy}", new {@class= "form-control"})
+        @Html.ValidationMessageFor(m => m.Customer.BirthDate)
+    </div>
+   
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m=>m.Customer.IsSubscribedToNewsletter) Subscribed To Newsletter?
@@ -29,4 +35,19 @@
     @Html.HiddenFor(m=>m.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 
+                                                 
+
+                                              
 }
+
+@section scripts
+{
+    
+   @Scripts.Render("~/bundles/jqueryval")
+
+}
+
+
+
+
+
