--- a/Vidley/Views/Customers/Index.cshtml
+++ b/Vidley/Views/Customers/Index.cshtml
@@ -6,33 +6,56 @@
 }
 
 <h2>Customers</h2>
- @if (!Model.Any())
- {
-     <text>No customer are registered yet.</text>
- }
- else
- {
+@if (!Model.Any())
+{
+    <text>No customer are registered yet.</text>
+}
+else
+{
 
-     <table class="table table-striped">
-         <thead>
-         <tr>
-             <th>Customer</th>
-             <th>MemberShip Type</th>
-         </tr>
-         </thead>
-         <tbody>
-         @foreach (var customer in Model)
-         {
-             <tr>
-                 <td>
-                     @Html.ActionLink(customer.Name, "Edit", "Customers", new {id = customer.Id}, null)
-                 </td>
-                 <td>
-                     @customer.MemberShipType.Name
-                 </td>
+    <table id="customers" class="table table-striped">
+        <thead>
+            <tr>
+                <th>Customer</th>
+                <th>MemberShip Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var customer in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
+                    </td>
+                    <td>
+                        @customer.MemberShipType.Name
+                    </td>
+                    <td>
+                        <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
 
-             </tr>
-         }
-         </tbody>
-     </table>
- }
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#customers .js-delete").on("click",
+                function () {
+                    var button = $(this);
+                    if (confirm("Are you sure you want to delete this customer.")) {
+                        $.ajax({
+                            url: "/api/customers/" + button.attr("data-customer-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+                            }
+                        });
+                    }
+                });
+        });
+    </script>
+}
